--- a/depricated/index-v1.html
+++ b/depricated/index-v1.html
@@ -15,7 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Rubik+Mono+One&family=VT323&display=swap"
         rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+15&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+15&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
@@ -76,45 +76,45 @@
             </div>
             <section class="prj-grid">
                 <!-- Projects start -->
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" preload="auto" muted playsinline loop>
                             <source src="assets/videos/purple-treees.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/purple-treees.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">purpl3 tr33s</h4>
-                        <p class="date-length">2O24</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">purpl3 tr33s</h4>
+                        <p class="content__vis--grid__item__info__date">2O24</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/flyman.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/flyman.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">fly,man</h4>
-                        <p class="date-length">2O24</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">fly,man</h4>
+                        <p class="content__vis--grid__item__info__date">2O24</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/little-dreamr.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/little-dreamr.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">Lost at sea</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">Lost at sea</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
 
                         <p class="prj-desc">
                             Sink into the depths of the ocean. Part of the HYPERLIFE gallery exhibit at the Brick Aux,
@@ -123,19 +123,19 @@
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/space-man.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/space-man.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">
                             <a href="https://youtu.be/Xj0EtyL7fVw" target="_blank" class="link">Space-Men</a>
                         </h4>
-                        <p class="date-length">(5 min) 2O23</p>
+                        <p class="content__vis--grid__item__info__date">(5 min) 2O23</p>
 
                         <p class="prj-desc">
                             An astronaut tries to save his crewmembers from a failing ship in
@@ -144,19 +144,19 @@
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/el-santo_1.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/el-santo_1.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">
                             <a href="https://youtu.be/ErilhrNfDMo" target="_blank" class="link">El Santo</a>
                         </h4>
-                        <p class="date-length">(5 min) 2O23</p>
+                        <p class="content__vis--grid__item__info__date">(5 min) 2O23</p>
 
                         <p class="prj-desc">
                             Luchador superstar El Santo battles his foes thru a technicolor lo-fi
@@ -165,163 +165,163 @@
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/wavyboxy.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/wavyboxy.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">
                             <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Wavy Silent Hour</a>
                         </h4>
-                        <p class="date-length">(1 hr) 2O23</p>
+                        <p class="content__vis--grid__item__info__date">(1 hr) 2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/frosty.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/frosty.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">
                             <a href="https://youtu.be/lq0bo3wxtUY?si=L8PuXvIZswJrlcnW" target="_blank"
                                 class="link">Frosty
                                 Silent Hour</a>
                         </h4>
-                        <p class="date-length">(1 hr) 2O23</p>
+                        <p class="content__vis--grid__item__info__date">(1 hr) 2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/bloom.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/bloom.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">Bloom</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">Bloom</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/colins.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/colins.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">clns</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">clns</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/black-rivr.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/black-rivr.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">blck river</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">blck river</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/rainbow-road.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/rainbow-road.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">rainbow road</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">rainbow road</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/clementines.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/clementines.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">clementines</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">clementines</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/gaming.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/gaming.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">gaming</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">gaming</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/butterfly.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/butterfly.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">buttrfly</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">buttrfly</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/spiral-wv.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/spiral-wv.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">spiriln</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">spiriln</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
-                <section class="prj-item">
-                    <section class="prj-img">
+                <section class="content__vis--grid__item">
+                    <section class="content__vis--grid__item__img">
                         <video class="video" muted playsinline loop>
                             <source src="assets/videos/glitchy.mp4" type="video/mp4" />
                             <source src="assets/videos/webm/glitchy.webm" type="video/webm" />
                         </video>
                     </section>
 
-                    <section class="prj-info">
-                        <h4 class="prj-title">glitchy</h4>
-                        <p class="date-length">2O23</p>
+                    <section class="content__vis--grid__item__info">
+                        <h4 class="content__vis--grid__item__info__title">glitchy</h4>
+                        <p class="content__vis--grid__item__info__date">2O23</p>
                     </section>
                 </section>
 
