--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Wilfredo Herrera">
+    <meta name="description" content="Webpage featuring art made by Wilfredo Herrera">
+    <meta name="keywords" content="TouchDesigner, Visual Artist, New York artist, Audiovisual, Visualizers, Visualizer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>visuales</title>
+    <title>portfolio de fredo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/jye5wnv.css">
 </head>
