--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>visuales</title>
+    <title>sobre wilfredo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/jye5wnv.css">
 </head>
@@ -125,7 +125,7 @@
         </div>
         <footer>
             <p class="foot-text">
-                &copy; 2024 WILFREDO HERRERA <br> <br> &#9886; This site is always evolving &#9887;
+                &copy; 2024 WILFREDO HERRERA <br> <br> &#9886; <strong>This site is always evolving</strong> &#9887;
             </p>
         </footer>
     </div>
